--- a/SourceCode_and_Documentation/GoalAndRecommendation/Recommendation/css/recommendation.css
+++ b/SourceCode_and_Documentation/GoalAndRecommendation/Recommendation/css/recommendation.css
@@ -16,10 +16,12 @@ p {
 .Dbtn {
     margin-top:50px;
     padding:10px 15px 10px 15px;
-    background-color:white;
-    border:none;
+    background-color:#3180de;
+    border:solid;
     border-radius:10px;
     font-size:18px;
+    border-color:#3180de;
+    color: white
 }
 
 #Bbtn {
@@ -28,7 +30,6 @@ p {
     background-color: #3180de;
     color:white;
     border-radius:10px;
-    border:none;
     font-size:18px
 }
 
@@ -40,14 +41,26 @@ p {
 
 .col {
     float:left;
-    width:19%;
-    border-style:solid;
-    padding:40px;
-    border-radius:10px;
-    border-color:#17a2b8;
-    background-color:#17a2b8
+    width:30%;
+    margin:20px
 }
 
+.col_backup {
+    padding:40px;
+    border-style:solid;
+    border-radius:10px;
+    border-color:#17a2b8;
+    background-color:#17a2b8;
+    margin-bottom:30px
+}
+
+.re {
+    padding:40px;
+    border-style:solid;
+    border-radius:10px;
+    margin-bottom:30px
+}
+/*
 #g1 {
     margin:0 80px 0 100px;
     background-color: #28a745;
@@ -62,6 +75,7 @@ p {
     background-color: #7b807a;
     border-color:#7b807a
 }
+*/
 
 .color {
     margin:25px 0 0 100px;
