began updating style consistency

--- a/FullBodyGrin/DashboardAndEmailPasswordUpdate/Dashboard/src/css/style.css
+++ b/FullBodyGrin/DashboardAndEmailPasswordUpdate/Dashboard/src/css/style.css
@@ -2,6 +2,11 @@ h3 {
     padding-top: 50px; 
 }
 
+h4 {
+    color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
 p {
     padding-left: 20px;
 }
